# serial-xml

./: .gitignore  CMakeLists.txt  LICENSE.md
cmake/: SerialXMLConfig.cmake.in
examples/: CMakeLists.txt  all.cpp  basic.cpp
include/: serial_xml.cxx
tests/: CMakeLists.txt  test_serial_xml.cpp
